<resources>
    <string name="app_name">P4U Library</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="tv_passwordresetinstruction">We just need your registered Email id to send you password reset instructions</string>
    <array name="role_array">
        <item>ADMIN</item>
        <item>HEAD</item>
        <item>USER</item>

    </array>
    <string name="banner_ad_unit_id">ca-app-pub-3010715647637473~4353073202</string>
    <string name="year_prompt">Year</string>
    <string-array name="pub_year">
        <item>Year</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>
    <string-array name="subject_list">
        <item>CATEGORY</item>
        <item>HINDI</item>
        <item>ENGLISH</item>
        <item>MATHS</item>
        <item>ENVIRONMENT</item>
        <item>SOCIAL STUDIES</item>
        <item>HISTORY</item>
        <item>SCIENCE</item>
        <item>CHEMISTRY</item>
        <item>PYSICS</item>
        <item>STORIES</item>
        <item>POLITICAL SCIENCE</item>
        <item>DRAMA</item>
        <item>NOVEL</item>
        <item>SANSKRIT</item>
        <item>COMPUTER SCIENCE</item>
        <item>MACHANICAL ENGINEERING</item>
        <item>ELECTRICAL ENGINEERING</item>
        <item>CIVIL ENGINEERING</item>
        <item>INFORMATION TECHNOLOGY</item>
        <item>MEDICAL</item>
        <item>ART</item>
        <item>PYSICAL SCIENCE</item>
    </string-array>


    <string name="tv_passwordupdateinstruction">Please enter password minimum 6 characters.</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="username_gmail_com">username@gmail.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_1234567890">1234567890</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="wazirganj">Wazirganj</string>
    <string name="identity">Identity</string>
    <string name="aadhar_id_voter_id">Aadhar ID/Voter ID</string>
    <string name="create_new_user">Create New User</string>
    <string name="exiting">Exiting…</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="welcome_to">Welcome To</string>
    <string name="parvarish_knowledge_center">ParvarishForYou</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="author_name">Author Name</string>
    <string name="book_title">Book Title</string>
    <string name="book_cost">Book Cost</string>
    <string name="book_location">Book Location</string>
    <string name="donor_name">Donor Name</string>
    <string name="donor_mobile">Donor Mobile</string>
    <string name="add">Add</string>
    <string name="books_list">Books List</string>
    <string name="tap_to_update_and_view_book_details">Tap to update and view book details</string>
    <string name="role">Role</string>
    <string name="center_location">Center Location</string>
    <string name="name">Name</string>
    <string name="chose_one_of_them_to_search">Chose one of them to search</string>
    <string name="search_by_title">Search By Title</string>
    <string name="search_by_author">Search By Author</string>
    <string name="search_by_category">Search By Category</string>
    <string name="search_by_cost">Search By Cost</string>
    <string name="check">Check</string>
    <string name="save">Save</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="menu_home">Home</string>
    <string name="menu_add_book">Add Book</string>
    <string name="menu_update_book">Update Book</string>
    <string name="menu_search_book">Search Book</string>
    <string name="menu_add_user">Add User</string>
    <string name="menu_update_user">Update User</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_logout_profile">Logout</string>
    <string name="nav_header_desc">desc</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">email</string>
    <string name="menu_delete_book">Delete Book</string>
    <string name="menu_issue_book">Issue Book</string>
    <string name="menu_submit_book">Submit Book</string>
    <string name="menu_list_book">List Book</string>
    <string name="user_corner">User Corner</string>
    <string name="menu_delete_user">Delete User</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="Book_Id">Book Id</string>
    <string name="bookidd">Book Id-</string>
    <string name="delete">Delete</string>
    <string name="mobile">Mobile No</string>
    <string name="menu_manage_user">Manage User</string>
    <string name="menu_news">Load News</string>
    <string name="menu_feedback">Feedback</string>
    <string name="et_search_book">Enter search term</string>
    <string name="btn_search_book">Search</string>
    <string name="search_by_subject">Search By Subject</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="skip_login">Skip Login</string>
    <string name="donor_list">Donor List</string>
    <string name="center_list">Center List</string>
    <string name="user_list">User List</string>


</resources>
