<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_book"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_add_book" />
        <item
            android:id="@+id/nav_update_book"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_update_book" />
        <item
            android:id="@+id/nav_search_book"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_search_book" />
        <item
            android:id="@+id/nav_issue_book"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_issue_book" />
        <item
            android:id="@+id/nav_submit_book"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_submit_book" />

    </group>
    <item android:title="@string/user_corner">
        <menu>
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_feedback" />
        </menu>
    </item>
</menu>
