<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView2"
    android:fillViewport="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".user_cornor.ResetPasswordActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forget_password"

            android:id="@+id/tv_forgotpassword"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textColor="@color/reds"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_passwordresetinstruction"
            android:id="@+id/tv_passwordreset"
            android:layout_below="@+id/tv_forgotpassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/reds"
            android:textAlignment="center"/>

        <EditText
            android:autofillHints="@string/username_gmail_com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:padding="12dp"
            android:id="@+id/et_email"
            android:layout_below="@+id/tv_passwordreset"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/email"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:id="@+id/btn_resetpassword"
            android:layout_below="@+id/et_email"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/btn_back"
            android:layout_below="@+id/btn_resetpassword"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar_reset"
            android:layout_below="@+id/btn_back"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

    </RelativeLayout>
    </ScrollView>
