<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/l1"
        android:weightSum="10"
        android:orientation="horizontal">
        <TextView
            android:padding="5dp"
            android:text="@string/username"
            android:layout_weight="6"
            style="@style/createuser_control_style"/>
        <EditText
            android:padding="5dp"
            android:id="@+id/etUserName"
            android:layout_weight="4"
            style="@style/createuser_textbox_style"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/l2"
        android:layout_below="@+id/l1"
        android:weightSum="10"
        android:orientation="horizontal">
        <TextView
            android:padding="5dp"
            android:text="@string/email"
            android:layout_weight="6"
            style="@style/createuser_control_style"/>
        <EditText
            android:padding="5dp"
            android:id="@+id/etEmailID"
            android:layout_weight="4"
            style="@style/createuser_textbox_style"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:padding="5dp"
            android:text="@string/mobile_number"
            android:layout_weight="6"
            style="@style/createuser_control_style"/>
        <EditText
            android:padding="5dp"
            android:layout_weight="4"
            android:id="@+id/etMobile"
            style="@style/createuser_textbox_style"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/l4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l3"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:weightSum="10">
        <TextView
            android:padding="5dp"
            android:text="@string/center_location"
            android:layout_weight="6"
            style="@style/createuser_control_style"/>
        <TextView
            android:padding="5dp"
            android:layout_weight="4"
            android:id="@+id/tvCenterName"
            style="@style/createuser_control_style"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/l5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l4"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:padding="5dp"
            android:text="@string/identity"
            android:layout_weight="6"
            style="@style/createuser_control_style"/>
        <EditText
            android:padding="5dp"
            android:layout_weight="4"
            android:id="@+id/etIdentity"
            style="@style/createuser_textbox_style"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/l6"
        android:layout_width="match_parent"
        android:layout_below="@+id/l5"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:padding="5dp"
            android:text="@string/role"
            android:layout_weight="6"
            style="@style/createuser_control_style"/>
        <TextView
            android:padding="5dp"
            android:layout_weight="4"
            android:id="@+id/tvRole"
            style="@style/createuser_control_style"/>
    </LinearLayout>
<LinearLayout
    android:id="@+id/l10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/l6"
    android:orientation="horizontal">
    <Button
        android:id="@+id/dbuttonSave"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:text="@string/save"
        android:background="@drawable/button_shape"
        android:textColor="@color/colorwhite"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/dbuttonchangepassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:text="@string/change_password"
        android:background="@drawable/button_shape"
        android:textColor="@color/colorwhite"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
</LinearLayout>

</RelativeLayout>
</ScrollView>
